tests/negative/regression/r22.orng
fn main() -> Int { 
    const ident = { return }
} 
